# ansible-chatbot-stack

./: .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  ansible-chatbot-deploy.yaml  ansible-chatbot-mcp-run.yaml  ansible-chatbot-run.yaml  ansible-chatbot-system-prompt-granite-compat.txt  ansible-chatbot-system-prompt.txt  codecov.yml  entrypoint.sh  init-rag-vector-db.sh  kustomization.yaml  lightspeed-stack-mcp.yaml  lightspeed-stack.yaml  lightspeed-stack_local.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: backport.yml  build_and_deploy.yml  ci_build.yml  code_coverage.yml  prompt-sync.yml  repo-sync.yml  sonarcloud.yml  test.yml
.tekton/: ansible-chatbot-stack-pull-request.yaml  ansible-chatbot-stack-push.yaml
scripts/: download_agent_yaml.sh  download_embeddings_and_vector_db.sh  generate_system_prompts.py  loading_test.py  render_system_prompt.py
templates/: ansible-chatbot-system-prompt.txt.j2
tests/: __init__.py  conftest.py  setup_test_data.py  test-ansible-chatbot-run.yaml  test-lightspeed-stack.yaml  test_openai.py  test_render_system_prompt.py
