[project]
name = "ansible-chatbot-stack"
version = "0.1.0"
description = "Ansible Lightspeed Intelligent Assistant (ALIA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu~=1.11",
    "lightspeed-stack-providers==0.1.18",
    "mcp~=1.24",
    "sentence-transformers>=5.0.0",
    "dumb-init>=1.2.5.post1",
    "litellm>=1.79.0",
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
    "authlib>=1.6.6",
    "pyasn1==0.6.2",
    # Need to pin transitive dependency to handle CVE
    "aiohttp==3.13.3", # CVE-2025-69223
    "cryptography==46.0.5", # CVE-2026-26007
    "pillow==12.1.1", # CVE-2026-25990
    "python-multipart==0.0.22", # CVE-2026-24486
]

[dependency-groups]
dev = [
    "cachetools>=6.1.0",
    "kubernetes>=33.1.0",
    "locust>=2.39.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
]
