[project]
name = "ansible-chatbot-stack"
version = "0.1.0"
description = "Automation Intelligent Assistant (AIA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.14.1", # Transient dep pinned to handle CVE
    "cryptography==46.0.7", # Transient dep pinned to handle CVE
    "dumb-init>=1.2.5.post1",
    "faiss-cpu==1.12",
    "lightspeed-stack-providers==0.4.3",
    "litellm==1.83.14",
    "mcp==1.26.0",
    "pillow==12.2.0", # Transient dep pinned to handle CVE
    "python-dotenv>=1.2.2", # Transient dep pinned to handle CVE
    "pyasn1==0.6.3",
    "pyjwt[crypto]==2.13.0", # Transient dep pinned to handle CVE
    "python-multipart==0.0.22", # Transient dep pinned to handle CVE
    "sentence-transformers==5.3.0",
    "transformers>=5.5.0", # Transient dep pinned to handle CVE
    "starlette==1.2.0",  # Transient dep pinned to handle CVE
    "urllib3==2.7.0",
]

[dependency-groups]
dev = [
    "cachetools>=6.1.0",
    "kubernetes>=33.1.0",
    "locust>=2.39.1",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
]
